fix half-width img spacing again

--- a/assets/styles/layouts/_portfolio-project.scss
+++ b/assets/styles/layouts/_portfolio-project.scss
@@ -442,10 +442,10 @@
 
 		.img--half-width {
 			img {
-		    width: 48%;
+		    width: 49%;
 		    //float: left;
 				margin-top: 2%;
-				padding: 0 1%;
+				//padding: 0 1%;
 			}
 			img:nth-child(even) {
 				float: right;
